# students_rooms

./: docker-compose.yaml  pyproject.toml
python/: Dockerfile  main.py  moduls.py  sql_queries.py
python/query_results/: query1.json  query1.xml  query2.json  query2.xml  query3.json  query3.xml  query4.json  query4.xml
python/tests/: tests.py
